works - no barba

--- a/data/excel_transformer.ipynb
+++ b/data/excel_transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "alike-given",
+   "id": "accompanied-controversy",
    "metadata": {},
    "source": [
     "## Import librearies\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "expanded-novelty",
+   "id": "blind-impossible",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "moving-destination",
+   "id": "alpha-mistake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "nearby-complexity",
+   "id": "governing-arbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "quiet-reputation",
+   "id": "disabled-angola",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "understood-appointment",
+   "id": "massive-celebrity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "three-nothing",
+   "id": "extensive-faculty",
    "metadata": {},
    "source": [
     "## Load excel file"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "north-dream",
+   "id": "regular-cradle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "radio-terminology",
+   "id": "cosmetic-medicine",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "pregnant-warehouse",
+   "id": "visible-spine",
    "metadata": {
     "tags": []
    },
@@ -629,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "preceding-explorer",
+   "id": "endless-testament",
    "metadata": {
     "tags": []
    },
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "precious-mediterranean",
+   "id": "former-thanksgiving",
    "metadata": {
     "tags": []
    },
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "third-lyric",
+   "id": "yellow-reminder",
    "metadata": {},
    "source": [
     "## Import images"
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "theoretical-evolution",
+   "id": "advised-jordan",
    "metadata": {},
    "source": [
     "keep building id column from excel"
@@ -1199,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "martial-mainstream",
+   "id": "unsigned-compatibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "athletic-pattern",
+   "id": "divine-thomas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solid-accused",
+   "id": "acting-labor",
    "metadata": {},
    "source": [
     "Load files from the photo folder"
@@ -1227,7 +1227,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "herbal-sewing",
+   "id": "driven-tsunami",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "victorian-honolulu",
+   "id": "chinese-beast",
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "twenty-apache",
+   "id": "understood-sector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "uniform-southwest",
+   "id": "muslim-battle",
    "metadata": {
     "tags": []
    },
@@ -2054,7 +2054,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ordered-karaoke",
+   "id": "accompanied-enclosure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2067,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "pursuant-garden",
+   "id": "absolute-render",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2077,7 +2077,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "simplified-couple",
+   "id": "hairy-intranet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2087,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "wrong-arctic",
+   "id": "gorgeous-establishment",
    "metadata": {
     "tags": []
    },
@@ -2136,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "dried-republic",
+   "id": "composed-opening",
    "metadata": {},
    "outputs": [
     {
@@ -2173,7 +2173,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "pretty-composer",
+   "id": "molecular-bible",
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2194,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "criminal-postage",
+   "id": "direct-template",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,7 +2204,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "painted-lambda",
+   "id": "packed-belarus",
    "metadata": {},
    "outputs": [
     {
@@ -2245,8 +2245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "pacific-mechanics",
+   "execution_count": 130,
+   "id": "informal-farming",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2255,7 +2255,7 @@
     "for index, row in df.iterrows():\n",
     "    #print(index, ': ', row)\n",
     "    inside_div_combined = '' # create empty string to append to \n",
-    "    tmp_div_open = '<div class=\"building_square\">' #  NOTICE: adding grow function\n",
+    "    tmp_div_open = '<div class=\"building_square\">' #  NOTICE: adding grow function grow (deleted)\n",
     "    #print(\"STARTING COLUMN PRINT\")\n",
     "    for col_index, col_name in enumerate(col_list):\n",
     "        tmp_div_inside = f'<p class=\"{col_name}\" style=\"display:none;\">{df.iloc[index, col_index]}</p>' # -----> NOTICE using a 'p'?\n",
@@ -2269,8 +2269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "id": "vulnerable-brand",
+   "execution_count": 131,
+   "id": "pressed-veteran",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2279,8 +2279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "musical-concern",
+   "execution_count": 132,
+   "id": "renewable-deficit",
    "metadata": {},
    "outputs": [
     {
@@ -2289,7 +2289,7 @@
        "'<p class=\"n_kindergartens\" style=\"display:none;\">0</p>'"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "original-hotel",
+   "id": "aware-intent",
    "metadata": {},
    "source": [
     "Load html > parse to string > insert after '<div class=\"grid\">' > export as html"
@@ -2308,8 +2308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "narrow-sailing",
+   "execution_count": 133,
+   "id": "connected-tender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2318,8 +2318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "peaceful-welding",
+   "execution_count": 134,
+   "id": "olive-playback",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2328,8 +2328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "still-psychology",
+   "execution_count": 135,
+   "id": "pediatric-bundle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2338,8 +2338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "id": "numerical-level",
+   "execution_count": 136,
+   "id": "fewer-conducting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2352,8 +2352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
-   "id": "consolidated-tamil",
+   "execution_count": 137,
+   "id": "opposed-wonder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2363,8 +2363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "demographic-research",
+   "execution_count": 138,
+   "id": "hybrid-barbados",
    "metadata": {},
    "outputs": [
     {
@@ -2373,7 +2373,7 @@
        "str"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2384,8 +2384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "specified-lincoln",
+   "execution_count": 139,
+   "id": "medieval-album",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2395,8 +2395,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "id": "greatest-nelson",
+   "execution_count": 140,
+   "id": "careful-domain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2405,8 +2405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "overhead-filing",
+   "execution_count": 141,
+   "id": "painful-nelson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2415,8 +2415,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "introductory-playlist",
+   "execution_count": 142,
+   "id": "dominican-trial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2425,8 +2425,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "permanent-synthetic",
+   "execution_count": 143,
+   "id": "intelligent-honduras",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "oriented-pleasure",
+   "id": "prospective-wallace",
    "metadata": {},
    "source": [
     "push only mid"
@@ -2443,8 +2443,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "id": "lesser-utility",
+   "execution_count": 144,
+   "id": "excited-security",
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
        "1199062"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "motivated-valve",
+   "id": "outside-essence",
    "metadata": {},
    "source": [
     "push everything"
@@ -2477,17 +2477,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
-   "id": "surface-savings",
+   "execution_count": 145,
+   "id": "honest-northeast",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1209727"
+       "1209131"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "confused-demonstration",
+   "id": "hawaiian-malpractice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2513,7 +2513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lesbian-statistics",
+   "id": "furnished-smoke",
    "metadata": {},
    "source": [
     "## Generate an executable (.exe) file from the jupyter-notebook"
@@ -2522,7 +2522,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "occupational-congo",
+   "id": "rental-essay",
    "metadata": {},
    "outputs": [
     {
@@ -2547,7 +2547,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "sound-sample",
+   "id": "collect-checklist",
    "metadata": {},
    "outputs": [
     {
@@ -2566,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opposite-exchange",
+   "id": "continent-alpha",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2577,7 +2577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sealed-phoenix",
+   "id": "revolutionary-leonard",
    "metadata": {},
    "outputs": [],
    "source": [
