--- a/data/excel_transformer.ipynb
+++ b/data/excel_transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "limited-beaver",
+   "id": "occupational-decade",
    "metadata": {},
    "source": [
     "## Import librearies\n"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "effective-eugene",
+   "execution_count": 144,
+   "id": "eligible-mistress",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "choice-reminder",
+   "execution_count": 145,
+   "id": "thick-settle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "olive-bidding",
+   "execution_count": 146,
+   "id": "understood-effect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ultimate-lobby",
+   "execution_count": 147,
+   "id": "needed-salvation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "inappropriate-measurement",
+   "execution_count": 148,
+   "id": "blessed-blocking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "regulated-statistics",
+   "id": "modular-quantity",
    "metadata": {},
    "source": [
     "## Load excel file"
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "young-michigan",
+   "execution_count": 149,
+   "id": "binding-spirituality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "arctic-calcium",
+   "execution_count": 150,
+   "id": "worse-surveillance",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "[700 rows x 26 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,8 +557,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "decent-friendly",
+   "execution_count": 151,
+   "id": "written-split",
    "metadata": {
     "tags": []
    },
@@ -595,7 +595,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "velvet-colonial",
+   "execution_count": 152,
+   "id": "defined-blame",
    "metadata": {
     "tags": []
    },
@@ -1086,7 +1086,7 @@
        "[700 rows x 23 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,8 +1097,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "solid-occupation",
+   "execution_count": 153,
+   "id": "textile-friend",
    "metadata": {
     "tags": []
    },
@@ -1173,7 +1173,7 @@
        "[700 rows x 0 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "charged-feelings",
+   "id": "emerging-pierce",
    "metadata": {},
    "source": [
     "## Import images"
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hired-tracy",
+   "id": "yellow-eagle",
    "metadata": {},
    "source": [
     "keep building id column from excel"
@@ -1200,8 +1200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "banned-significance",
+   "execution_count": 154,
+   "id": "funky-nudist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,8 +1210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "public-nancy",
+   "execution_count": 155,
+   "id": "coated-advocacy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "discrete-clearing",
+   "id": "synthetic-renaissance",
    "metadata": {},
    "source": [
     "Load files from the photo folder"
@@ -1228,8 +1228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "filled-navigation",
+   "execution_count": 156,
+   "id": "disabled-selection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,8 +1238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "bacterial-headset",
+   "execution_count": 157,
+   "id": "temporal-notice",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        "764"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,8 +1259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "normal-relay",
+   "execution_count": 158,
+   "id": "productive-inventory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,8 +1269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "military-minneapolis",
+   "execution_count": 159,
+   "id": "uniform-corpus",
    "metadata": {
     "tags": []
    },
@@ -2044,7 +2044,7 @@
        " 'תרצה 23-שלמה-5_7187.jpg']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,8 +2055,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "german-jimmy",
+   "execution_count": 160,
+   "id": "stretch-label",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,8 +2068,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "integrated-arbor",
+   "execution_count": 161,
+   "id": "complicated-neighbor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,8 +2078,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "electrical-little",
+   "execution_count": 162,
+   "id": "advance-indicator",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,8 +2088,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "cathedral-fundamental",
+   "execution_count": 163,
+   "id": "convenient-hypothesis",
    "metadata": {
     "tags": []
    },
@@ -2137,8 +2137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "handed-storage",
+   "execution_count": 164,
+   "id": "centered-break",
    "metadata": {},
    "outputs": [
     {
@@ -2174,8 +2174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "czech-wiring",
+   "execution_count": 165,
+   "id": "divided-violence",
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
        "-1"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2195,8 +2195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "alive-procedure",
+   "execution_count": 166,
+   "id": "tutorial-milan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,8 +2205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "characteristic-republican",
+   "execution_count": 167,
+   "id": "loved-parent",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
        " 'secondary']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2251,8 +2251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "absent-afternoon",
+   "execution_count": 205,
+   "id": "continent-locking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2261,7 +2261,7 @@
     "for index, row in df.iterrows():\n",
     "    #print(index, ': ', row)\n",
     "    inside_div_combined = '' # create empty string to append to \n",
-    "    tmp_div_open = '<div class=\"building_square\">' #  NOTICE: adding grow function grow (deleted)\n",
+    "    tmp_div_open = '<div class=\"building_square\" col_header=\"b\">' #  NOTICE: col_header=\"b\"\n",
     "    #print(\"STARTING COLUMN PRINT\")\n",
     "    for col_index, col_name in enumerate(col_list):\n",
     "        tmp_div_inside = f'<p class=\"{col_name}\" style=\"display:none;\">{df.iloc[index, col_index]}</p>' # -----> NOTICE using a 'p'?\n",
@@ -2275,8 +2275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "fabulous-senegal",
+   "execution_count": 206,
+   "id": "gorgeous-trade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2285,8 +2285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "instant-purchase",
+   "execution_count": 207,
+   "id": "impaired-novel",
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2295,7 @@
        "'<p class=\"secondary\" style=\"display:none;\">international_neoclassicism</p>'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2306,7 +2306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "large-arcade",
+   "id": "driven-dispatch",
    "metadata": {},
    "source": [
     "Load html > parse to string > insert after '<div class=\"grid\">' > export as html"
@@ -2314,8 +2314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "enabling-legislature",
+   "execution_count": 208,
+   "id": "wrapped-yesterday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,8 +2324,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "streaming-chosen",
+   "execution_count": 209,
+   "id": "bored-killing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2334,8 +2334,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "accepted-straight",
+   "execution_count": 210,
+   "id": "developed-check",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,8 +2344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "id": "fiscal-doctor",
+   "execution_count": 211,
+   "id": "julian-joining",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,8 +2358,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "centered-lighter",
+   "execution_count": 212,
+   "id": "quality-madonna",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2369,8 +2369,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "cleared-wichita",
+   "execution_count": 213,
+   "id": "tender-gateway",
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2379,7 @@
        "str"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,8 +2390,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "popular-engagement",
+   "execution_count": 214,
+   "id": "three-failure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,8 +2401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "stock-window",
+   "execution_count": 215,
+   "id": "personal-unknown",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,8 +2411,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "surgical-morris",
+   "execution_count": 216,
+   "id": "numeric-spirituality",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,8 +2421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "popular-viewer",
+   "execution_count": 217,
+   "id": "mature-blackjack",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,8 +2431,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "id": "detailed-investigation",
+   "execution_count": 218,
+   "id": "sitting-importance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "australian-motor",
+   "id": "according-mexico",
    "metadata": {},
    "source": [
     "push only mid"
@@ -2449,17 +2449,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
-   "id": "functioning-region",
+   "execution_count": 219,
+   "id": "pleased-advantage",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1353966"
+       "1364466"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2475,7 +2475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bound-cameroon",
+   "id": "initial-malaysia",
    "metadata": {},
    "source": [
     "push everything"
@@ -2483,17 +2483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "scientific-scholar",
+   "execution_count": 220,
+   "id": "soviet-louisiana",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1367120"
+       "1377620"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2509,8 +2509,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "through-prime",
+   "execution_count": 203,
+   "id": "approximate-range",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brutal-strip",
+   "id": "expired-utility",
    "metadata": {},
    "source": [
     "## Generate an executable (.exe) file from the jupyter-notebook"
@@ -2527,8 +2527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "color-makeup",
+   "execution_count": 204,
+   "id": "occupied-singer",
    "metadata": {},
    "outputs": [
     {
@@ -2552,16 +2552,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "formed-height",
+   "execution_count": 186,
+   "id": "responsible-stretch",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-43-180559d49540>, line 1)",
+     "evalue": "invalid syntax (<ipython-input-186-180559d49540>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-43-180559d49540>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    jupyter nbconvert --to script my_notebook.ipynb\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-186-180559d49540>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    jupyter nbconvert --to script my_notebook.ipynb\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -2572,7 +2572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "multiple-sucking",
+   "id": "heavy-newman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2583,7 +2583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "first-guide",
+   "id": "endless-tender",
    "metadata": {},
    "outputs": [],
    "source": [
