added link to each image - which is not unique for image

--- a/data/excel_transformer.ipynb
+++ b/data/excel_transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "occupational-decade",
+   "id": "civilian-tracker",
    "metadata": {},
    "source": [
     "## Import librearies\n"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
-   "id": "eligible-mistress",
+   "execution_count": 1,
+   "id": "animated-internship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
-   "id": "thick-settle",
+   "execution_count": 2,
+   "id": "secondary-judges",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "understood-effect",
+   "execution_count": 3,
+   "id": "warming-maker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "needed-salvation",
+   "execution_count": 4,
+   "id": "charming-italic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "blessed-blocking",
+   "execution_count": 5,
+   "id": "annoying-cornell",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modular-quantity",
+   "id": "impossible-microphone",
    "metadata": {},
    "source": [
     "## Load excel file"
@@ -71,8 +71,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "binding-spirituality",
+   "execution_count": 6,
+   "id": "generous-width",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "worse-surveillance",
+   "execution_count": 7,
+   "id": "given-cooking",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "[700 rows x 26 columns]"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,8 +557,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "written-split",
+   "execution_count": 8,
+   "id": "demographic-setting",
    "metadata": {
     "tags": []
    },
@@ -595,7 +595,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "defined-blame",
+   "execution_count": 9,
+   "id": "christian-creativity",
    "metadata": {
     "tags": []
    },
@@ -1086,7 +1086,7 @@
        "[700 rows x 23 columns]"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,8 +1097,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "textile-friend",
+   "execution_count": 10,
+   "id": "informational-pound",
    "metadata": {
     "tags": []
    },
@@ -1173,7 +1173,7 @@
        "[700 rows x 0 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "emerging-pierce",
+   "id": "british-leave",
    "metadata": {},
    "source": [
     "## Import images"
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "yellow-eagle",
+   "id": "proper-reservation",
    "metadata": {},
    "source": [
     "keep building id column from excel"
@@ -1200,8 +1200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
-   "id": "funky-nudist",
+   "execution_count": 11,
+   "id": "several-street",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1210,8 +1210,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "id": "coated-advocacy",
+   "execution_count": 12,
+   "id": "clinical-elizabeth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "synthetic-renaissance",
+   "id": "signal-anger",
    "metadata": {},
    "source": [
     "Load files from the photo folder"
@@ -1228,8 +1228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "disabled-selection",
+   "execution_count": 13,
+   "id": "japanese-newspaper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,8 +1238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "temporal-notice",
+   "execution_count": 14,
+   "id": "eleven-source",
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1248,7 @@
        "764"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,8 +1259,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "id": "productive-inventory",
+   "execution_count": 15,
+   "id": "ancient-authentication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,8 +1269,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "uniform-corpus",
+   "execution_count": 16,
+   "id": "acknowledged-living",
    "metadata": {
     "tags": []
    },
@@ -2044,7 +2044,7 @@
        " 'תרצה 23-שלמה-5_7187.jpg']"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2055,8 +2055,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "id": "stretch-label",
+   "execution_count": 17,
+   "id": "cutting-finding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2068,8 +2068,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
-   "id": "complicated-neighbor",
+   "execution_count": 18,
+   "id": "aging-personal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2078,8 +2078,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "advance-indicator",
+   "execution_count": 19,
+   "id": "related-moscow",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,8 +2088,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "convenient-hypothesis",
+   "execution_count": 20,
+   "id": "dangerous-lotus",
    "metadata": {
     "tags": []
    },
@@ -2137,8 +2137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "centered-break",
+   "execution_count": 21,
+   "id": "composite-peter",
    "metadata": {},
    "outputs": [
     {
@@ -2174,8 +2174,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "divided-violence",
+   "execution_count": 22,
+   "id": "central-diagnosis",
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2184,7 @@
        "-1"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2195,8 +2195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "tutorial-milan",
+   "execution_count": 23,
+   "id": "local-regression",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,8 +2205,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "loved-parent",
+   "execution_count": 24,
+   "id": "empirical-chance",
    "metadata": {},
    "outputs": [
     {
@@ -2240,7 +2240,7 @@
        " 'secondary']"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2251,8 +2251,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
-   "id": "continent-locking",
+   "execution_count": 59,
+   "id": "pressed-malpractice",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2266,7 +2266,9 @@
     "    for col_index, col_name in enumerate(col_list):\n",
     "        tmp_div_inside = f'<p class=\"{col_name}\" style=\"display:none;\">{df.iloc[index, col_index]}</p>' # -----> NOTICE using a 'p'?\n",
     "        inside_div_combined += tmp_div_inside\n",
-    "    tmp_div_img = f'<img src=\"{img_src_lst[index]}\">' # change image each row    \n",
+    "    building_card_link = 'http://www.yahoo.com'\n",
+    "    link_open_option = '_blank'\n",
+    "    tmp_div_img = f\"\"\"<a href=\"#\" onClick=\"window.open('{building_card_link}', '_blank') \"><img src=\"{img_src_lst[index]}\"></a>\"\"\" # change image each row - NOTICE <a> tag    \n",
     "    inside_div_combined += tmp_div_img # tmp_div_inside + tmp_div_img - BEFORE // CREATED DOUBLE LAST LINE\n",
     "    tmp_div_close = f'</div>'\n",
     "    tmp_str = tmp_div_open + inside_div_combined + tmp_div_close\n",
@@ -2275,8 +2277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
-   "id": "gorgeous-trade",
+   "execution_count": 60,
+   "id": "verified-rough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2285,8 +2287,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
-   "id": "impaired-novel",
+   "execution_count": 61,
+   "id": "standing-guide",
    "metadata": {},
    "outputs": [
     {
@@ -2295,7 +2297,7 @@
        "'<p class=\"secondary\" style=\"display:none;\">international_neoclassicism</p>'"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2306,7 +2308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "driven-dispatch",
+   "id": "pointed-perfume",
    "metadata": {},
    "source": [
     "Load html > parse to string > insert after '<div class=\"grid\">' > export as html"
@@ -2314,8 +2316,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "id": "wrapped-yesterday",
+   "execution_count": 62,
+   "id": "union-correspondence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2324,8 +2326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "id": "bored-killing",
+   "execution_count": 63,
+   "id": "hungarian-marking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2334,8 +2336,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "id": "developed-check",
+   "execution_count": 64,
+   "id": "lonely-force",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,8 +2346,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "id": "julian-joining",
+   "execution_count": 65,
+   "id": "decimal-swift",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2358,8 +2360,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "id": "quality-madonna",
+   "execution_count": 66,
+   "id": "increased-messenger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2369,8 +2371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "id": "tender-gateway",
+   "execution_count": 67,
+   "id": "insured-american",
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2381,7 @@
        "str"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,8 +2392,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
-   "id": "three-failure",
+   "execution_count": 68,
+   "id": "appreciated-cleaning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2401,8 +2403,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
-   "id": "personal-unknown",
+   "execution_count": 69,
+   "id": "separated-checklist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2411,8 +2413,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
-   "id": "numeric-spirituality",
+   "execution_count": 70,
+   "id": "perfect-nicholas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2421,8 +2423,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
-   "id": "mature-blackjack",
+   "execution_count": 71,
+   "id": "alert-andrews",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,8 +2433,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
-   "id": "sitting-importance",
+   "execution_count": 72,
+   "id": "usual-noise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2441,7 +2443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "according-mexico",
+   "id": "excited-fence",
    "metadata": {},
    "source": [
     "push only mid"
@@ -2449,17 +2451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
-   "id": "pleased-advantage",
+   "execution_count": 73,
+   "id": "seeing-immunology",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1364466"
+       "1415566"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2475,7 +2477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "initial-malaysia",
+   "id": "dated-saying",
    "metadata": {},
    "source": [
     "push everything"
@@ -2483,17 +2485,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
-   "id": "soviet-louisiana",
+   "execution_count": 74,
+   "id": "understanding-recognition",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1377620"
+       "1428365"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2509,8 +2511,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
-   "id": "approximate-range",
+   "execution_count": 58,
+   "id": "looking-mortgage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2519,7 +2521,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expired-utility",
+   "id": "nearby-lottery",
    "metadata": {},
    "source": [
     "## Generate an executable (.exe) file from the jupyter-notebook"
@@ -2528,7 +2530,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "occupied-singer",
+   "id": "distinguished-franklin",
    "metadata": {},
    "outputs": [
     {
@@ -2553,7 +2555,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "responsible-stretch",
+   "id": "lonely-austria",
    "metadata": {},
    "outputs": [
     {
@@ -2572,7 +2574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "heavy-newman",
+   "id": "frank-manhattan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2583,7 +2585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "endless-tender",
+   "id": "western-award",
    "metadata": {},
    "outputs": [],
    "source": [
