image sliding on building card html

--- a/data/excel_transformer.ipynb
+++ b/data/excel_transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "civilian-tracker",
+   "id": "coastal-tomato",
    "metadata": {},
    "source": [
     "## Import librearies\n"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "animated-internship",
+   "id": "everyday-rochester",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "secondary-judges",
+   "id": "animal-wallpaper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "warming-maker",
+   "id": "residential-darwin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "charming-italic",
+   "id": "double-punishment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "annoying-cornell",
+   "id": "color-conditions",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-microphone",
+   "id": "metallic-guyana",
    "metadata": {},
    "source": [
     "## Load excel file"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "generous-width",
+   "id": "postal-atlas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "given-cooking",
+   "id": "comprehensive-education",
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "demographic-setting",
+   "id": "plain-passing",
    "metadata": {
     "tags": []
    },
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "christian-creativity",
+   "id": "yellow-conditioning",
    "metadata": {
     "tags": []
    },
@@ -1098,7 +1098,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "informational-pound",
+   "id": "english-bruce",
    "metadata": {
     "tags": []
    },
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "british-leave",
+   "id": "continuing-success",
    "metadata": {},
    "source": [
     "## Import images"
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proper-reservation",
+   "id": "uniform-trout",
    "metadata": {},
    "source": [
     "keep building id column from excel"
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "several-street",
+   "id": "supreme-removal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "clinical-elizabeth",
+   "id": "operating-jenny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signal-anger",
+   "id": "square-faith",
    "metadata": {},
    "source": [
     "Load files from the photo folder"
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "japanese-newspaper",
+   "id": "featured-intent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1239,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "eleven-source",
+   "id": "alternate-immune",
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ancient-authentication",
+   "id": "occasional-borough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "acknowledged-living",
+   "id": "virgin-walker",
    "metadata": {
     "tags": []
    },
@@ -2056,7 +2056,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cutting-finding",
+   "id": "computational-oxygen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2069,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "aging-personal",
+   "id": "nonprofit-handy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2079,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "related-moscow",
+   "id": "lesbian-moore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2089,7 +2089,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "dangerous-lotus",
+   "id": "extraordinary-growth",
    "metadata": {
     "tags": []
    },
@@ -2138,7 +2138,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "composite-peter",
+   "id": "infinite-aruba",
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "central-diagnosis",
+   "id": "primary-communist",
    "metadata": {},
    "outputs": [
     {
@@ -2196,7 +2196,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "local-regression",
+   "id": "hidden-booth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2206,7 +2206,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "empirical-chance",
+   "id": "offensive-excerpt",
    "metadata": {},
    "outputs": [
     {
@@ -2252,7 +2252,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "pressed-malpractice",
+   "id": "verbal-framing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2278,7 +2278,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "verified-rough",
+   "id": "cognitive-furniture",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2288,7 +2288,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "standing-guide",
+   "id": "iraqi-american",
    "metadata": {},
    "outputs": [
     {
@@ -2308,7 +2308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pointed-perfume",
+   "id": "funny-blake",
    "metadata": {},
    "source": [
     "Load html > parse to string > insert after '<div class=\"grid\">' > export as html"
@@ -2317,7 +2317,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "union-correspondence",
+   "id": "pressing-charity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2327,7 +2327,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "hungarian-marking",
+   "id": "former-isaac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2337,7 +2337,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "lonely-force",
+   "id": "general-shape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2347,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "decimal-swift",
+   "id": "peripheral-sponsorship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2361,7 +2361,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "increased-messenger",
+   "id": "naked-swedish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2372,7 +2372,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "insured-american",
+   "id": "tested-maple",
    "metadata": {},
    "outputs": [
     {
@@ -2393,7 +2393,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "appreciated-cleaning",
+   "id": "level-intersection",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2404,7 +2404,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "separated-checklist",
+   "id": "discrete-nurse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2414,7 +2414,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "perfect-nicholas",
+   "id": "disturbed-toner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2424,7 +2424,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "alert-andrews",
+   "id": "piano-words",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2434,7 +2434,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "usual-noise",
+   "id": "outside-basics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2443,7 +2443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excited-fence",
+   "id": "religious-summary",
    "metadata": {},
    "source": [
     "push only mid"
@@ -2452,7 +2452,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "seeing-immunology",
+   "id": "fourth-bahrain",
    "metadata": {},
    "outputs": [
     {
@@ -2477,7 +2477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dated-saying",
+   "id": "collected-berry",
    "metadata": {},
    "source": [
     "push everything"
@@ -2486,7 +2486,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "understanding-recognition",
+   "id": "lonely-cache",
    "metadata": {},
    "outputs": [
     {
@@ -2512,7 +2512,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "looking-mortgage",
+   "id": "ahead-merit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2521,7 +2521,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nearby-lottery",
+   "id": "vocal-honduras",
+   "metadata": {},
+   "source": [
+    "## Create a building card for each image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "compound-hobby",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "complete-slovakia",
    "metadata": {},
    "source": [
     "## Generate an executable (.exe) file from the jupyter-notebook"
@@ -2530,7 +2546,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "distinguished-franklin",
+   "id": "minimal-commercial",
    "metadata": {},
    "outputs": [
     {
@@ -2555,7 +2571,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "lonely-austria",
+   "id": "eligible-audio",
    "metadata": {},
    "outputs": [
     {
@@ -2574,7 +2590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "frank-manhattan",
+   "id": "configured-light",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2601,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "western-award",
+   "id": "gorgeous-diesel",
    "metadata": {},
    "outputs": [],
    "source": [
